--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://file.myfontastic.com/Jnf54BZCm7mSjGCxNRbfp3/icons.css" rel="stylesheet">
   </head>
 <body>
+  <a class="github-button" href="https://github.com/swimlane/ng2d3" data-style="mega" data-count-href="/swimlane/ng2d3/stargazers" data-count-api="/repos/swimlane/ng2d3#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star swimlane/ng2d3 on GitHub">Star</a>
   <app>Loading...</app>
-<script type="text/javascript" src="polyfills.2164fe54b3aa0975fde8.js"></script><script type="text/javascript" src="vendor.2164fe54b3aa0975fde8.js"></script><script type="text/javascript" src="app.2164fe54b3aa0975fde8.js"></script></body>
+  <script src="https://buttons.github.io/buttons.js"></script>
+<script type="text/javascript" src="polyfills.7bf5444c3f98044825c7.js"></script><script type="text/javascript" src="vendor.7bf5444c3f98044825c7.js"></script><script type="text/javascript" src="app.7bf5444c3f98044825c7.js"></script></body>
 </html>
