--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
   <a class="github-button" href="https://github.com/swimlane/ng2d3" data-style="mega" data-count-href="/swimlane/ng2d3/stargazers" data-count-api="/repos/swimlane/ng2d3#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star swimlane/ng2d3 on GitHub">Star</a>
   <app>Loading...</app>
   <script src="https://buttons.github.io/buttons.js"></script>
-<script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="app.js"></script></body>
+<script type="text/javascript" src="libs.js"></script><script type="text/javascript" src="app.js"></script></body>
 </html>
