--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         margin-top: 5px;
       }
     </style>
-  <link href="app.css" rel="stylesheet"></head>
+  </head>
 <body>
   <div class="social-toolbox">
     <a class="github-button" href="https://github.com/swimlane/ngx-charts" data-style="mega" data-count-href="/swimlane/ngx-charts/stargazers" data-count-api="/repos/swimlane/ngx-charts#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star swimlane/ngx-charts on GitHub">Star</a>
